--- a/res/values-zh-rCN/cm_strings.xml
+++ b/res/values-zh-rCN/cm_strings.xml
@@ -20,4 +20,8 @@
   <string name="account_setup_options_mail_check_frequency_2hour">每隔 2 小时</string>
   <string name="account_setup_options_mail_check_frequency_4hour">每隔 2 小时</string>
   <string name="account_setup_options_mail_check_frequency_1day">每天</string>
+
+    <!-- Heads up -->
+    <string name="account_settings_heads_up_label">浮动通知模式</string>
+    <string name="account_settings_heads_up_summary">以浮动视窗显示这个帐户信息或提示</string>
 </resources>
